# app/Http/Resources/TaskResource.php
@@ -16,6 +16,10 @@ class TaskResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'title' => $this->title,
+            'due_date' => $this->due_date,
+            'completed' => $this->completed,
+        ];
     }
 }
